Bug 4419 - restored mini jumpto button with icon from koshi
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@6244 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/basic-layouts/content/css/miniplayer.css
+++ b/feathers/basic-layouts/content/css/miniplayer.css
@@ -94,7 +94,8 @@ sb-sys-close-button.miniplayer
 /* JumpTo Button */
 sb-player-jumpto-button.miniplayer
 {
-  display: none;
+  list-style-image: url(chrome://songbird/skin/icons/icon_jumpto.png) !important;
+  -moz-image-region: auto;
   margin: 0px 0px 0px 5px;  
 }
 
